<?xml version="1.0" encoding="utf-8"?><!--todo take whole screen space, show dialog normally but rest of the screen should be overlayed with alpha 20% gray-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/padding_medium"
        android:background="@color/white"
        android:paddingHorizontal="@dimen/padding_medium"
        android:paddingTop="@dimen/padding_medium">

        <TextView
            android:id="@+id/label_config_name"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_config_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_config_name"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:hint="@string/hint_config_name"
            app:layout_constraintTop_toBottomOf="@id/label_config_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_config_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="config 1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_load"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_load"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_config_name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_medium"
            android:text="@string/btn_save"
            app:layout_constraintLeft_toRightOf="@id/btn_load"
            app:layout_constraintTop_toBottomOf="@id/til_config_name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_medium"
            android:text="@string/btn_delete"
            app:layout_constraintLeft_toRightOf="@id/btn_save"
            app:layout_constraintTop_toBottomOf="@id/til_config_name" />

        <TextView
            android:id="@+id/label_run_mode"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:text="@string/label_run_mode"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_load" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_infinite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_infinite"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_run_mode" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_cycles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_cycles_count"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rb_infinite" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_cycles"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_medium"
            android:minWidth="100dp"
            app:errorEnabled="true"
            app:layout_constraintLeft_toRightOf="@id/rb_cycles"
            app:layout_constraintTop_toTopOf="@id/rb_cycles">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_cycles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                tools:text="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_cycles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="rb_cycles,til_cycles" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tv_cancel"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier_cycles" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tv_save"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_medium"
            android:text="@string/save"
            app:layout_constraintRight_toLeftOf="@id/tv_cancel"
            app:layout_constraintTop_toBottomOf="@id/barrier_cycles" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>