<?xml version="1.0" encoding="utf-8"?><!--todo take whole screen space, show dialog normally but rest of the screen should be overlayed with alpha 20% gray-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/padding_medium"
        android:background="@color/white"
        android:paddingLeft="@dimen/padding_medium"
        android:paddingTop="@dimen/padding_medium"
        android:paddingRight="@dimen/padding_medium">

        <TextView
            android:id="@+id/label_run_config"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_click_point_config"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_delay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_delay"
            app:layout_constraintTop_toBottomOf="@id/label_run_config" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_delay"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:minWidth="100dp"
            app:errorEnabled="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_delay">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_delay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                tools:text="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/label_delay_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_medium"
            android:text="@string/label_delay_unit"
            app:layout_constraintLeft_toRightOf="@id/til_delay"
            app:layout_constraintTop_toTopOf="@id/til_delay" />

        <TextView
            android:id="@+id/tv_cancel"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_medium"
            android:text="@string/cancel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_delay" />

        <TextView
            android:id="@+id/tv_save"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_medium"
            android:text="@string/save"
            app:layout_constraintRight_toLeftOf="@id/tv_cancel"
            app:layout_constraintTop_toBottomOf="@id/til_delay" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>